--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,8 +3,13 @@ accompanistNavigationAnimation = "0.36.0"
 agp = "8.7.3"
 converterGson = "2.11.0"
 datastorePreferences = "1.1.1"
+googleServices = "4.4.2"
+googleServicesVersion = "4.3.15"
+gradle = "8.1.4"
+gradleVersion = "8.1.1"
 hiltAndroid = "2.51.1"
 hiltCompiler = "2.44"
+hiltCompilerVersion = "2.54"
 kotlin = "2.0.21"
 coreKtx = "1.15.0"
 junit = "4.13.2"
@@ -12,12 +17,13 @@ junitVersion = "1.2.1"
 espressoCore = "3.6.1"
 lifecycleRuntimeKtx = "2.8.7"
 activityCompose = "1.9.3"
-composeBom = "2024.04.01"
+composeBom = "2024.12.01"
 loggingInterceptor = "4.11.0"
 material = "1.7.6"
 navigationCompose = "2.8.5"
 okhttp = "4.11.0"
 retrofit = "2.11.0"
+symbolProcessingApi = "2.0.21-1.0.25"
 ui = "1.7.6"
 
 [libraries]
@@ -27,8 +33,13 @@ androidx-datastore-preferences = { module = "androidx.datastore:datastore-prefer
 androidx-material = { module = "androidx.compose.material:material", version.ref = "material" }
 androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navigationCompose" }
 converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "converterGson" }
+google-services = { module = "com.google.gms:google-services", version.ref = "googleServices" }
+google-services-v4315 = { module = "com.google.gms:google-services", version.ref = "googleServicesVersion" }
+gradle = { module = "com.android.tools.build:gradle", version.ref = "gradle" }
+gradle-v811 = { module = "com.android.tools.build:gradle", version.ref = "gradleVersion" }
 hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hiltAndroid" }
 hilt-compiler = { module = "com.google.dagger:hilt-compiler", version.ref = "hiltCompiler" }
+hilt-compiler-v254 = { module = "com.google.dagger:hilt-compiler", version.ref = "hiltCompilerVersion" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
@@ -45,6 +56,7 @@ androidx-material3 = { group = "androidx.compose.material3", name = "material3" 
 logging-interceptor = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "loggingInterceptor" }
 okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
+symbol-processing-api = { module = "com.google.devtools.ksp:symbol-processing-api", version.ref = "symbolProcessingApi" }
 ui = { module = "androidx.compose.ui:ui", version.ref = "ui" }
 
 [plugins]
