--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,6 +3,7 @@ accompanistNavigationAnimation = "0.36.0"
 agp = "8.7.3"
 converterGson = "2.11.0"
 datastorePreferences = "1.1.1"
+googleHiltCompiler = "2.51.1"
 googleServices = "4.4.2"
 googleServicesVersion = "4.3.15"
 gradle = "8.1.4"
@@ -40,6 +41,7 @@ gradle = { module = "com.android.tools.build:gradle", version.ref = "gradle" }
 gradle-v811 = { module = "com.android.tools.build:gradle", version.ref = "gradleVersion" }
 hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hiltAndroid" }
 hilt-compiler = { module = "com.google.dagger:hilt-compiler", version.ref = "hiltCompiler" }
+hilt-compiler-v2511 = { module = "com.google.dagger:hilt-compiler", version.ref = "googleHiltCompiler" }
 hilt-compiler-v254 = { module = "com.google.dagger:hilt-compiler", version.ref = "hiltCompilerVersion" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
